# lindoapi-R

./: .gitignore  INSTALL.html  README.md  install-rlindo-r35.bat  install-rlindo-r4.bat  install-rlindo-r42.bat  install-rlindo-r45.bat  install-rlindo.bat  install-rlindo.sh  lsmake_rlib.bat
rLindo/: DESCRIPTION  INSTALL  INSTALL.html  NAMESPACE  README  configure  configure.ac
rLindo/R/: rLindo.R  rLindoParam.R  zzz.R
rLindo/inst/: NEWS.Rd
rLindo/inst/doc/: rLindo_Quick_Start.R  rLindo_Quick_Start.Rnw  rLindo_Quick_Start.bak
rLindo/man/: rLSaddChanceConstraint.Rd  rLSaddCones.Rd  rLSaddConstraints.Rd  rLSaddDiscreteBlocks.Rd  rLSaddDiscreteIndep.Rd  rLSaddEmptySpacesAcolumns.Rd  rLSaddEmptySpacesNLPAcolumns.Rd  rLSaddInstruct.Rd  rLSaddNLPAj.Rd  rLSaddNLPobj.Rd  rLSaddParamDistIndep.Rd  rLSaddQCShift.Rd  rLSaddQCterms.Rd  rLSaddSETS.Rd  rLSaddScenario.Rd  rLSaddVariables.Rd  rLSaggregateStages.Rd  rLScalinfeasMIPsolution.Rd  rLScheckConvexity.Rd  rLScopyParam.Rd  rLScreateEnv.Rd  rLScreateModel.Rd  rLScreateRG.Rd  rLScreateRGMT.Rd  rLSdeduceStages.Rd  rLSdeleteAj.Rd  rLSdeleteCones.Rd  rLSdeleteConstraints.Rd  rLSdeleteEnv.Rd  rLSdeleteModel.Rd  rLSdeleteNLPobj.Rd  rLSdeleteQCterms.Rd  rLSdeleteSETS.Rd  rLSdeleteSemiContVars.Rd  rLSdeleteString.Rd  rLSdeleteStringData.Rd  rLSdeleteVariables.Rd  rLSdisposeRG.Rd  rLSfillRGBuffer.Rd  rLSfindBlockStructure.Rd  (+252 more)
rLindo/src/: Makevars  Makevars.in  Makevars.win  lscmpr.sh.old  rLindo.bak  rLindo.c  rLindo.h  rLindo_NAMESPACE.r  rLindo_rrrr.r  rLindo_temp.ce  rLindo_temp.h
rLindo/src/tmp/: a  a2  b  c  c2  cleanup.sh
rLindo/vignettes/: rLindo_Quick_Start.Rnw  rLindo_Quick_Start.bak
samples/: ex_err.R  ex_file.R  ex_hs71.R  ex_hs71a.R  ex_licstr.R  ex_lp.R  ex_mip.R  ex_mps.R  ex_nlp.R  ex_par.R  hs71s_mpx.R  lad.R  ladmip.R
